fix: using dyn array instead of linked lists

--- a/meson.build
+++ b/meson.build
@@ -5,7 +5,7 @@ project(
   license: 'MIT',
 )
 
-add_global_arguments(language: 'c')
+add_global_arguments('-O3', '-g3', language: 'c')
 
 cc = meson.get_compiler('c')
 math_dep = cc.find_library('m', required: true)
